ajout de la fonctionalité ajout d'une question

--- a/src/app/categories/categories.page.html
+++ b/src/app/categories/categories.page.html
@@ -2,9 +2,9 @@
 <ion-content>
   <div class="header">
     <ion-buttons >
-      <ion-button >
-        <ion-icon slot="icon-only" color="light" name="arrow-back"></ion-icon>
-      </ion-button>
+
+        <ion-back-button slot="start" defaultHref="/nombre-jouers"></ion-back-button>
+
     </ion-buttons>
     <ion-buttons>
       <ion-button>
