--- a/src/app/nombre-jouers/nombre-jouers.page.html
+++ b/src/app/nombre-jouers/nombre-jouers.page.html
@@ -4,7 +4,17 @@
   </ion-toolbar>
 </ion-header> -->
 
+
+
 <ion-content [fullscreen]="true" class="ion-padding">
+  <div class="header">
+    <ion-buttons >
+
+        <ion-back-button slot="start" defaultHref="/home"></ion-back-button>
+
+    </ion-buttons>
+  </div>
+
   <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
   <div class="button-container">
     <ion-button expand="block" class="custom-button" (click)="OneJoeur()">
