--- a/src/app/quiz/quiz.page.html
+++ b/src/app/quiz/quiz.page.html
@@ -14,7 +14,7 @@
     <ion-button >
       <ion-badge color="warning">5 Points</ion-badge> &nbsp; <p color="white">En Jeu Pendant</p> &nbsp;<ion-badge color="warning">secondes</ion-badge>
     </ion-button>
-  
+
   </div>
 </div> -->
 
@@ -22,11 +22,11 @@
 
   <span  class="catniv" >
     <ion-badge color="dark"><ion-icon name="home-outline"></ion-icon></ion-badge>&nbsp;
-    <ion-badge color="dark">catEnCours<ion-icon name="chevron-forward-outline"></ion-icon>nivEnCours</ion-badge>&nbsp;
+    <ion-badge color="dark">Cat:{{data.cat}}<ion-icon name="chevron-forward-outline"></ion-icon>Niv:{{data.niv}}</ion-badge>&nbsp;
   <ion-badge color="dark" class="compte" shape="round" >taille/total</ion-badge>
   </span>
   <span class="encours">
-    <ion-badge color="warning">5 Points</ion-badge> &nbsp; <p class="blanc">En Jeu Pendant</p> &nbsp;<ion-badge color="warning">49secondes</ion-badge>
+    <ion-badge color="warning">3 Points</ion-badge> &nbsp; <p class="blanc">En Jeu Pendant</p> &nbsp;<ion-badge color="warning">{{ tempsRestant }}secondes</ion-badge>
   </span>
 <br> <br> <br> <br>
 
@@ -46,7 +46,7 @@
       </div> -->
     </ion-card-content>
   </ion-card>
-  
+
 
 
 
